fix segfault after modifying indexes during yield SERVER-3961 3